# esp-libopus

./: .gitignore  CLAUDE.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
custom/: README.md  custom_support.h  stack_alloc.h  thread_local_stack.c  thread_local_stack.h
custom/silk/: SigProc_FIX.h
examples/simple_decoder/: CMakeLists.txt
examples/simple_decoder/main/: CMakeLists.txt  simple_decoder_main.c
examples/thread_safe_test/: CMakeLists.txt  sdkconfig.defaults
examples/thread_safe_test/main/: CMakeLists.txt  thread_safe_test.c
